--- a/movie-quotes/styles.css
+++ b/movie-quotes/styles.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Ghostbusters';
-    src: url('/fonts/GHOSTBUS.woff2') format('woff2'),
-        url('/fonts/GHOSTBUS4.TTF') format('truetype');
+    src: url('fonts/GHOSTBUS.woff2') format('woff2'),
+        url('fonts/GHOSTBUS4.TTF') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
